[package]
name = "price-provider"
version = "0.4.1"
authors = ["Dock.io"]
edition = "2021"

[dependencies]
utils = { package = "utils", path = "../utils", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
    "derive",
], default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0", features = ["derive"], optional = true }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }

[features]
default = ["std"]
std = [
    "serde",
    "utils/std",
    "sp-runtime/std",
    "serde/std",
    "codec/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "scale-info/std",
    "frame-system/std",
    "frame-support/std",
]
