[package]
name = "utils"
version = "0.3.0"
authors = ["Dock.io"]
edition = "2021"

[dependencies]
num-traits = { version = "0.2.14", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }

[features]
default = ["std"]
std = [
    "serde",
    "sp-runtime/std",
    "codec/std",
    "sp-std/std",
    "scale-info/std",
    "frame-support/std",
    "num-traits/std"
]
