[package]
name = "price-feed"
version = "0.2.1"
authors = ["Dock.io"]
edition = "2021"
license = "Apache-2.0"
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[dev-dependencies]
hex = "0.4.2"

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "3.0.0"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.119"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.price-provider]
path = "../../libs/price_provider"
default-features = false

[dev-dependencies.balances]
package = "pallet-balances"
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dev-dependencies.timestamp]
package = "pallet-timestamp"
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[features]
default = ["std"]
std = [
    "codec/std",
    "price-provider/std",
    "serde",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-api/std",
    "scale-info/std",
    "sp-io/std",
]
