[package]
name = "price-feed-rpc"
version = "0.1.0"
authors = ["Dock.io"]
edition = "2021"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
serde = {version = "1.0.119", features = ["derive"], optional = true }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29"}
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29"}
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
price-feed = {version = "0.1.0", path = ".." }